--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -45,4 +48,19 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0px;
+  margin: 0px 8px;
+  align-items: center;
+  gap: 8px;
+}
+
+.left, .right {
+  display: flex;
+  align-items: center;
+}
+
+.right {
+  flex-shrink: 0;
+  gap: 8px;
 }
