--- a/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
+++ b/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
@@ -49,3 +49,50 @@ html {
   background-color: #393f4d;
   grid-column: 1 / 3;
 }
+
+/* 
+- Add CSS Selectors
+- Use Dynamic Track Sizes for your columns and rows (auto-
+- Grid Tracks don't use static sizes
+- Gap: 15px
+- 4x2 Grid
+- Second Column 3x Larger than others
+- Third Row 5x larger than the others
+- Row 3 gets taller to accomodate text wrapping as you narrow the viewport
+- The columns narrow and widen as the viewport changes size
+*/
+
+/* Solution */
+
+.container {
+  display: grid;
+  grid: [row1-start] "header header header header" 1fr [row1-end]
+        [row2-start] "sidebar nav nav nav" 1fr [row2-end]
+        [row3-start] "sidebar article article article" 5fr [row3-end]
+        [row4-start] "footer footer footer footer" 1fr [row4-end]
+        / 1fr 3fr;
+  gap: 15px;
+}
+
+.header {
+  grid-column: header;
+}
+
+.sidebar {
+  grid-row: sidebar;
+}
+
+.nav {
+  grid-row: nav;
+  grid-column: nav;
+}
+
+.article {
+  grid-row: article;
+  grid-column: article;
+}
+
+.footer {
+  grid-row: footer;
+  grid-column: footer;
+}
