--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -89,3 +89,66 @@
   font-size: 13px;
   font-weight: normal;
 }
+
+/* Solution */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;   
+}
+
+.header {
+  grid-column: 1 / 3;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 2fr;
+}
+
+.logo {
+  justify-self: start;
+}
+
+.menu {
+  justify-self: space-between;
+}
+
+.menu > ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.nav > ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+li {
+  list-style: none;
+}
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+}
+
+.article .card {
+  height: 200px;
+}
+
+.footer {
+  grid-column: 1 / 3;
+}
+
+.sidebar {
+  display: grid;
+  grid-row: 2/4;
+  gap: 50px;
+  justify-items: stretch;
+}
+
+.side-content,
+.photo {
+  display: grid;
+  align-items: center;
+}
